tests/overload-02/out.txt
error: mismatched types: expected real, found int
  ┌─ err.sml:3:9
  │
3 │ val _ = add (1, 2)
  │         ^^^^^^^^^^

typechecking failed
